--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="About Bakery." />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://www.paypal.com/sdk/js?client-id=AYJvkDsO065ZyGmqftbpfClFKpFoxDXMSpTN90ETMjvL9Uss5dpgeL62m28skQNXJY2Fe-BRjkweX9BF&currency=CAD"></script>
     <title>Bakery</title>
   </head>
   <body>
