--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,43 @@
     <meta name="description" content="About Bakery." />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://www.paypal.com/sdk/js?client-id=AYJvkDsO065ZyGmqftbpfClFKpFoxDXMSpTN90ETMjvL9Uss5dpgeL62m28skQNXJY2Fe-BRjkweX9BF&currency=CAD"></script>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+      (function (m, e, t, r, i, k, a) {
+        m[i] =
+          m[i] ||
+          function () {
+            (m[i].a = m[i].a || []).push(arguments);
+          };
+        m[i].l = 1 * new Date();
+        (k = e.createElement(t)),
+          (a = e.getElementsByTagName(t)[0]),
+          (k.async = 1),
+          (k.src = r),
+          a.parentNode.insertBefore(k, a);
+      })(
+        window,
+        document,
+        "script",
+        "https://mc.yandex.ru/metrika/tag.js",
+        "ym"
+      );
+
+      ym(85488208, "init", {
+        clickmap: true,
+        trackLinks: true,
+        accurateTrackBounce: true,
+      });
+    </script>
+    <noscript
+      ><div>
+        <img
+          src="https://mc.yandex.ru/watch/85488208"
+          style="position: absolute; left: -9999px"
+          alt=""
+        /></div
+    ></noscript>
+    <!-- /Yandex.Metrika counter -->
     <title>Bakery</title>
   </head>
   <body>
